--- a/Styles/NavigationListBoxItem.xaml
+++ b/Styles/NavigationListBoxItem.xaml
@@ -3,13 +3,14 @@
                     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
     <Style x:Key="Styles.NavigationListBoxItem" TargetType="ListBoxItem"
            BasedOn="{StaticResource {x:Type ListBoxItem}}">
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"/>
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" />
         <Style.Triggers>
             <Trigger Property="IsSelected" Value="True">
-                <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}" />
-                <Setter Property="BorderThickness" Value="7.5 0 0 0"/>
-                <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}"/>
+                <Setter Property="Background"
+                        Value="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}" />
+                <Setter Property="BorderThickness" Value="7.5 0 0 0" />
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}" />
             </Trigger>
         </Style.Triggers>
     </Style>
