--- a/Features/Calendar/RaceContentView.xaml
+++ b/Features/Calendar/RaceContentView.xaml
@@ -20,7 +20,7 @@
             <Setter Property="Height" Value="{StaticResource IconSize}" />
         </Style>
         <Style TargetType="Button" BasedOn="{StaticResource {x:Static adonisUi:Styles.AccentButton}}">
-            <Setter Property="ToolTipService.InitialShowDelay" Value="{x:Static misc:Constants.GlobalToolTipDelay}" />
+            <Setter Property="ToolTipService.InitialShowDelay" Value="{x:Static misc:Constants+UI.GlobalToolTipDelay}" />
             <Setter Property="Margin" Value="5" />
         </Style>
     </Grid.Resources>
