--- a/Features/Settings/SettingsRootView.xaml
+++ b/Features/Settings/SettingsRootView.xaml
@@ -26,23 +26,38 @@
         <RowDefinition Height="Auto" />
         <RowDefinition Height="*" />
     </Grid.RowDefinitions>
-    <Button Grid.Row="1" Grid.Column="0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Bottom"
-            Margin="{adonisUi:Space 1, 1}"
-            Style="{DynamicResource {x:Static adonisUi:Styles.AccentButton}}"
-            Command="{s:Action OpenGithubRepo}"
-            ToolTip="View Source GitHub">
-        <Button.Content>
-            <DockPanel LastChildFill="True">
-                <iconPacks:PackIconMaterial Kind="Github" 
-                                            DockPanel.Dock="Left"/>
-                <TextBlock Text="{Binding Version, StringFormat='Version: {0}'}" 
-                           Margin="5 0 0 0"
-                           VerticalAlignment="Center"/>
-            </DockPanel>
-        </Button.Content>
-    </Button>
+    <StackPanel Grid.Row="1" Grid.Column="0" 
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom">
+        <StackPanel.Resources>
+            <Style TargetType="Button" BasedOn="{StaticResource {x:Static adonisUi:Styles.AccentButton}}">
+                <Setter Property="Margin" Value="8 0 0 8"/>
+                <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            </Style>
+            <Style TargetType="TextBlock">
+                <Setter Property="Margin" Value="5 0 0 0"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+        </StackPanel.Resources>
+        <Button Command="{s:Action OpenGithubRepo}">
+            <Button.Content>
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconMaterial Kind="Github" 
+                                                DockPanel.Dock="Left"/>
+                    <TextBlock Text="View Source On Github"/>
+                </StackPanel>
+            </Button.Content>
+        </Button>
+        <Button Command="{s:Action OpenChangelog}">
+            <Button.Content>
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconMaterial Kind="FormatListBulleted"
+                                                DockPanel.Dock="Left"/>
+                    <TextBlock Text="{Binding Version, StringFormat='v{0} - View Changelog'}"/>
+                </StackPanel>
+            </Button.Content>
+        </Button>
+    </StackPanel>
     <TextBlock Grid.Row="0" Grid.Column="0" Text="Settings" Style="{DynamicResource HeaderStyle}" />
     <StackPanel Grid.Row="1" Grid.Column="0">
         <StackPanel.Resources>
