--- a/Styles/CountdownElement.Hollow.xaml
+++ b/Styles/CountdownElement.Hollow.xaml
@@ -1,38 +1,36 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System;assembly=System.Runtime"
                     xmlns:controls="clr-namespace:F1Desktop.Controls"
-                    xmlns:converters="clr-namespace:F1Desktop.Converters"
-                    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
-        <Style x:Key="Styles.CountdownElement" TargetType="{x:Type controls:CountdownElement}">
+                    xmlns:system="clr-namespace:System;assembly=System.Runtime"
+                    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+                    xmlns:converters="clr-namespace:F1Desktop.Converters">
+    <Style x:Key="Styles.CountdownElement.Hollow" TargetType="{x:Type controls:CountdownElement}">
         <Style.Resources>
-            <system:Double x:Key="CircleSize">75</system:Double>
+            <system:Double x:Key="OuterRadius">50</system:Double>
+            <system:Double x:Key="InnerRadius">40</system:Double>
+            <Point x:Key="Point" X="{StaticResource OuterRadius}" Y="{StaticResource OuterRadius}" />
             <converters:IntThresholdConverter x:Key="IntThresholdConverter" />
             <Style TargetType="TextBlock">
                 <Setter Property="HorizontalAlignment" Value="Center" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Setter Property="Grid.Column" Value="1" />
-                <Setter Property="FontWeight" Value="Bold"/>
-                <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.AccentForegroundBrush}}"/>
             </Style>
         </Style.Resources>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:CountdownElement}">
                     <Grid Margin="5">
-                        <Ellipse Stroke="{DynamicResource {x:Static adonisUi:Brushes.AccentHighlightBrush}}"
-                                StrokeThickness="2"
-                                HorizontalAlignment="Center"
-                                Width="{StaticResource CircleSize}"
-                                Height="{StaticResource CircleSize}">
-                            <Ellipse.Style>
-                                <Style TargetType="{x:Type Ellipse}">
+                        <Path Stroke="{DynamicResource {x:Static adonisUi:Brushes.AccentHighlightBrush}}"
+                              StrokeThickness="2"
+                              HorizontalAlignment="Center">
+                            <Path.Style>
+                                <Style TargetType="{x:Type Path}">
                                     <Style.Triggers>
                                         <DataTrigger
                                             Binding="{Binding IsLightOut, RelativeSource={RelativeSource TemplatedParent}}"
                                             Value="True">
                                             <Setter Property="Fill"
-                                                    Value="{DynamicResource {x:Static adonisUi:Brushes.Layer3BorderBrush}}" />
+                                                    Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}" />
                                         </DataTrigger>
                                         <DataTrigger
                                             Binding="{Binding IsLightOut, RelativeSource={RelativeSource TemplatedParent}}"
@@ -42,8 +40,22 @@
                                         </DataTrigger>
                                     </Style.Triggers>
                                 </Style>
-                            </Ellipse.Style>
-                        </Ellipse>
+                            </Path.Style>
+                            <Path.Data>
+                                <CombinedGeometry GeometryCombineMode="Xor">
+                                    <CombinedGeometry.Geometry1>
+                                        <EllipseGeometry RadiusX="{StaticResource OuterRadius}"
+                                                         RadiusY="{StaticResource OuterRadius}"
+                                                         Center="{StaticResource Point}" />
+                                    </CombinedGeometry.Geometry1>
+                                    <CombinedGeometry.Geometry2>
+                                        <EllipseGeometry RadiusX="{StaticResource InnerRadius}"
+                                                         RadiusY="{StaticResource InnerRadius}"
+                                                         Center="{StaticResource Point}" />
+                                    </CombinedGeometry.Geometry2>
+                                </CombinedGeometry>
+                            </Path.Data>
+                        </Path>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="1*" />
